  * Makefile:
    - re-introduce kdeglobals, this time for KDE4.
    - install KDE4 stuff in /usr/share/kde4/*.
    - don't install -moodin ksplash themes.
    - install spacefun ksplash theme, remove previous themes, not working with
      KDE4.
  * ksplash:
    - *-moodin dropped, moodin is a KDE3 theme engine.
    - remove all other themes not ported to KDE4.
    - spacefun themes added
  * ksplashrc:
    - use spacefun theme

 -- Yves-Alexis Perez <corsac@debian.org>  Sat, 20 Nov 2010 20:53:54 +0100

desktop-base (6.0.0) unstable; urgency=low

  * The “Welcome Noémie” upload, adding Squeeze artwork.
  * debian/control:
    - update kde suggest to kde-standards.                      closes: #548244
    - update standards version to 3.9.1.
  * backgrounds:
    - add SpaceFun wallpaper
  * slashy:
    - add SpaceFun theme.
    - drop completely Moreblue Orbit theme.
  * kdm-theme:
    - add SpaceFun theme.
    - configure SpaceFun as the default theme.
  * debian/postinst:
    - add SpaceFun alternative at maximum level (default Squeeze theme).
    - rename grub alternative to add png extension so grub can find it.
    - run sync before updating grub to be sure the grub background has been
      written to disk.
  * debian/prerm:
    - rename grub alternative to add png extension.
  * Makefile: 
    - drop unused rules for KDE3 and Xfce 4.4.
    - add SpaceFun gdm3 theme.
    - add SpaceFun kdm theme. 
    - install grub theme and script.
  * {ksplash,kdm}-theme/moreblue-orbit{-default}:
    - drop “Debian” word from image to only use DFSG-free logo. closes: #587668
  * debian/copyright updated for the new theme.
  * grub:
    - add SpaceFun grub theme.
    - add a grub_background.sh which will override settings in grub and
      correctly set the default theme.
  * debian/README.Debian updated.
  * splash:
    - add SpaceFun splash.
  * profiles/xdg-config/xfce4/xfconf/xfce-perchannel-xml/xfce4-session.xml:
    - update colors to match new splash screen.
