@@ -1,18 +1,0 @@
-[Desktop0]
-BackgroundMode=VerticalGradient
-BlendBalance=100
-BlendMode=NoBlending
-ChangeInterval=60
-Color1=30,114,160
-Color2=192,192,192
-CurrentWallpaper=0
-LastChange=0
-MinOptimizationDepth=1
-MultiWallpaperMode=NoMulti
-Pattern=
-Program=
-ReverseBlending=false
-UseSHM=false
-Wallpaper=/usr/share/images/desktop-base/desktop-background
-WallpaperList=
-WallpaperMode=Scaled
