@@ -1,0 +1,2 @@
+Containments][1][Wallpaper][image]
+wallpaper=/usr/share/images/desktop-base/desktop-background
